--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
                 <h2>Models</h2>
                 <table id="models-table" style="width:100%;margin-bottom:24px;"><thead><tr><th>Name</th><th>File</th><th>Description</th></tr></thead><tbody></tbody></table>
                 <h2>Cabinet Sensors</h2>
-                <table id="sensors-table" style="width:100%;margin-bottom:24px;"><thead><tr><th>Unique ID</th><th>Name</th><th>Description</th></tr></thead><tbody></tbody></table>
+                <table id="sensors-table" style="width:100%;margin-bottom:24px;"><thead><tr><th>Unique ID</th></tr></thead><tbody></tbody></table>
                 <h2>Test Configuration Mapping</h2>
                 <table id="mapping-table" style="width:100%;margin-bottom:24px;"><thead><tr><th>Cabinet Connection</th><th>Device Sensor</th></tr></thead><tbody></tbody></table>
                 <h2>Model Configurations</h2>
