--- a/templates/run_test.html
+++ b/templates/run_test.html
@@ -10,6 +10,13 @@
     <span id="run-status" style="margin-left:16px;color:green;"></span>
 </form>
 
+<div id="test-run-history-section" style="margin-top:32px;">
+    <h2>Previous Test Runs</h2>
+    <table id="test-run-history-table" style="width:100%;">
+        <thead><tr><th>Date/Time</th><th>Data File</th><th>Test Configuration</th></tr></thead>
+        <tbody></tbody>
+    </table>
+</div>
 <script src="{{ url_for('static', filename='run_test.js') }}"></script>
 
 {% endblock %}
