add user and record against test run

--- a/templates/_sidebar.html
+++ b/templates/_sidebar.html
@@ -7,4 +7,12 @@
         <li><a href="/model_config" id="menu-model">Model Configuration</a></li>
         <li><a href="/run_test" id="menu-run-test">Run Test</a></li>
     </ul>
+    <div class="sidebar-user-icon">
+        <span class="sidebar-user-name">Emma Wagner</span>
+        <!-- User SVG icon -->
+        <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <circle cx="19" cy="12" r="7" fill="#fff"/>
+            <ellipse cx="19" cy="28" rx="12" ry="8" fill="#fff"/>
+        </svg>
+    </div>
 </nav>
