--- a/templates/run_test.html
+++ b/templates/run_test.html
@@ -13,7 +13,7 @@
 <div id="test-run-history-section" style="margin-top:32px;">
     <h2>Previous Test Runs</h2>
     <table id="test-run-history-table" style="width:100%;">
-        <thead><tr><th>Date/Time</th><th>Data File</th><th>Test Configuration</th></tr></thead>
+        <thead><tr><th>Date/Time</th><th>Data File</th><th>Test Configuration</th><th>User</th></tr></thead>
         <tbody></tbody>
     </table>
 </div>
