--- a/templates/_sidebar.html
+++ b/templates/_sidebar.html
@@ -1,18 +1,23 @@
 <nav class="sidebar">
     <ul>
         <li><a href="/" id="menu-home">Home</a></li>
-        <li><a href="/cabinet_sensors" id="menu-sensors">Cabinet Sensors</a></li>
+        <li><a href="/test_chamber" id="menu-sensors">{{ nav_test_chamber_name }}</a></li>
         <li><a href="/test_config" id="menu-test-config">Test Configuration</a></li>
         <li><a href="/models" id="menu-models">Models</a></li>
         <li><a href="/model_config" id="menu-model">Model Configuration</a></li>
         <li><a href="/run_test" id="menu-run-test">Run Test</a></li>
     </ul>
-    <div class="sidebar-user-icon">
+    <div class="sidebar-user-cog-wrap-fixed">
         <span class="sidebar-user-name">Emma Wagner</span>
-        <!-- User SVG icon -->
         <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg">
             <circle cx="19" cy="12" r="7" fill="#fff"/>
             <ellipse cx="19" cy="28" rx="12" ry="8" fill="#fff"/>
         </svg>
+        <a href="/app_config" class="sidebar-cog-icon" title="App Configuration" style="width:38px;height:38px;text-align:center;">
+            <svg width="38" height="38" viewBox="0 0 24 24" fill="none" style="display:block;margin:0 auto;" xmlns="http://www.w3.org/2000/svg">
+                <path d="M12 15.5A3.5 3.5 0 1 0 12 8.5a3.5 3.5 0 0 0 0 7zm7.43-2.9l1.77-1.02a1 1 0 0 0 .37-1.36l-1.67-2.89a1 1 0 0 0-1.22-.47l-2.08.83a7.03 7.03 0 0 0-1.62-.94l-.31-2.21A1 1 0 0 0 13.3 3h-2.6a1 1 0 0 0-.99.85l-.31 2.21a7.03 7.03 0 0 0-1.62.94l-2.08-.83a1 1 0 0 0-1.22.47l-1.67 2.89a1 1 0 0 0 .37 1.36l1.77 1.02a7.14 7.14 0 0 0 0 1.88l-1.77 1.02a1 1 0 0 0-.37 1.36l1.67 2.89a1 1 0 0 0 1.22.47l2.08-.83c.5.36 1.04.68 1.62.94l.31 2.21a1 1 0 0 0 .99.85h2.6a1 1 0 0 0 .99-.85l.31-2.21c.58-.26 1.12-.58 1.62-.94l2.08.83a1 1 0 0 0 1.22-.47l1.67-2.89a1 1 0 0 0-.37-1.36l-1.77-1.02c.04-.31.07-.63.07-.94s-.03-.63-.07-.94z" fill="#fff"/>
+            </svg>
+        </a>
     </div>
+</nav>
 </nav>
