--- a/templates/_sidebar.html
+++ b/templates/_sidebar.html
@@ -2,7 +2,7 @@
     <ul>
         <li><a href="/" id="menu-home">Home</a></li>
         <li><a href="/test_chamber" id="menu-sensors">{{ nav_test_chamber_name }}</a></li>
-        <li><a href="/test_config" id="menu-test-config">Test Configuration</a></li>
+        <li><a href="/test_config" id="menu-test-config">{{ nav_test_config_name }}</a></li>
         <li><a href="/models" id="menu-models">Models</a></li>
         <li><a href="/model_config" id="menu-model">Model Configuration</a></li>
         <li><a href="/run_test" id="menu-run-test">Run Test</a></li>
