--- a/templates/index.html
+++ b/templates/index.html
@@ -23,11 +23,11 @@
             </label>
             <div id="all-tables">
                 <h2>Models</h2>
-                <table id="models-table"><thead><tr><th>Name</th><th>File</th><th>Description</th></tr></thead><tbody></tbody></table>
+                <table id="models-table" class="table-full"><thead><tr><th>Name</th><th>File</th><th>Description</th></tr></thead><tbody></tbody></table>
                 <h2>Cabinet Sensors</h2>
-                <table id="sensors-table"><thead><tr><th>Unique ID</th></tr></thead><tbody></tbody></table>
+                <table id="sensors-table" class="table-full"><thead><tr><th>Unique ID</th></tr></thead><tbody></tbody></table>
                 <h2>Test Configuration Mapping</h2>
-                <table id="mapping-table"><thead><tr><th>Cabinet Connection</th><th>Device Sensor</th></tr></thead><tbody></tbody></table>
+                <table id="mapping-table" class="table-full"><thead><tr><th>Cabinet Connection</th><th>Device Sensor</th></tr></thead><tbody></tbody></table>
                 <h2>Model Configurations</h2>
                 <div id="model-configs-list"></div>
             </div>
