--- a/templates/run_test.html
+++ b/templates/run_test.html
@@ -13,7 +13,7 @@
 
 <div id="test-run-history-section">
     <h2>Previous Test Runs</h2>
-    <table id="test-run-history-table">
+    <table id="test-run-history-table" class="table-full">
         <thead><tr><th>Date/Time</th><th>Data File</th><th>Test Configuration</th><th>User</th><th>Notes</th></tr></thead>
         <tbody></tbody>
     </table>
