--- a/templates/index.html
+++ b/templates/index.html
@@ -36,5 +36,6 @@
     </div>
     <script src="/static/main.js"></script>
     <script src="/static/index.js"></script>
+    {% block scripts %}{% endblock %}
 </body>
 </html>
