--- a/templates/test_config.html
+++ b/templates/test_config.html
@@ -1,17 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cabinet Configuration</title>
-    <link rel="stylesheet" href="/static/style.css">
-    <link rel="stylesheet" href="/static/test_config.css">
-</head>
-<body>
-    <div class="container">
-        {% include '_sidebar.html' %}
-        <main class="main-content">
-            <div class="display-flex-header">
+{% extends "index.html" %}
+{% block content %}
+<link rel="stylesheet" href="/static/test_config.css">
+<div class="display-flex-header">
     <h1>{{ test_config_page_name or 'Test Configuration' }}</h1>
     <button class="cog-btn" id="config-cog-btn" title="Import/Export Config">
         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -19,6 +9,48 @@
         </svg>
     </button>
 </div>
+<!-- Modal Popup for Import/Export -->
+<div class="modal-overlay" id="test-config-modal">
+    <div class="modal-content">
+        <button class="modal-close-btn" id="close-config-modal">&times;</button>
+        <h2>Import/Export Config</h2>
+        <button id="download-test-mapping-btn" type="button">Download Config JSON</button>
+        <label for="upload-test-mapping-input">
+            <input type="file" id="upload-test-mapping-input" accept="application/json" />
+            <span>Upload Config JSON</span>
+        </label>
+    </div>
+</div>
+<div id="test-config-container">
+    <div>
+        <label for="config-selector"><b>Select Configuration:</b></label>
+        <select id="config-selector"></select>
+        <button id="add-config-btn" type="button">Add New Configuration</button>
+    </div>
+    <div>
+        <label><b>Name:</b> <input type="text" id="config-name"></label>
+        <label><b>Description:</b> <input type="text" id="config-desc"></label>
+    </div>
+    <h2>Test to Device Sensor Mapping</h2>
+    <table id="test-mapping-table" class="table-full">
+        <thead>
+            <tr>
+                <th>{{ cabinet_connection_label or 'Cabinet Connection' }}</th>
+                <th>{{ device_sensor_label or 'Device Sensor' }}</th>
+                <th>Action</th>
+            </tr>
+        </thead>
+        <tbody>
+            <!-- Rows will be populated by JS -->
+        </tbody>
+    </table>
+    <div id="spinner" class="spinner" style="display:none;"></div>
+    <button id="add-test-mapping-btn">Add Mapping</button>
+    <button id="save-test-mapping-btn">Save Mapping</button>
+    <div id="test-save-status" style="margin-top:16px;color:green;"></div>
+</div>
+{% endblock %}
+{% block scripts %}<script src="/static/test_config.js"></script>{% endblock %}
 <!-- Modal Popup for Import/Export -->
 <div class="modal-overlay" id="test-config-modal">
     <div class="modal-content">
@@ -65,8 +97,7 @@
 </div>
         </main>
     </div>
-    <script src="/static/main.js"></script>
-    <script src="/static/test_config.js"></script>
+
 </body>
 </html>
     
